k8s/meals/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meals-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: meals
