k8s/meals/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meals-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: api/v1/service/meals
            pathType: "Prefix"
            backend:
              service:
                name: meals-service
                port:
                  number: 3000
